[package]
name = "libp2p-websocket-reproduction"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", branch = "master", features = ["noise", "yamux", "wasm-bindgen", "websocket-websys"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["console"] }
